# parqr

./: Cargo.toml  README.md  build.rs
.github/workflows/: cicd.yml
src/: main.rs
src/df/: export.rs  filetype.rs  filter.rs  sort.rs
src/map/: hexagon.rs  marker.rs
src/plot/: hexagon.rs
src/table/: table.rs
src/ui/: views.rs
