[package]
name = "parqr"
version = "0.1.0"
edition = "2024"
description = "Desktop GUI Parquet Table/Map"

[dependencies]
eframe = { version = "0.33.0", features = ["default"] }
egui_extras = "0.33.0"
h3o = "0.9.3"
image = "0.25.9"
polars = { version = "0.51.0", features = ["lazy", "parquet", "dtype-full", "strings", "regex"] }
rfd = "0.15.4"
walkers = "0.49.0"
walkers_extras = "0.49.0"

[build-dependencies]
winres = "0.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Parqr"
icons = ["assets/parqr.png"]
[[file-associations]]
extensions = ["parquet"]
description = "Parquet File Viewer"
